add scripts folder, move masonry files

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,5 +50,5 @@ permalink: /portfolio/
   </div>
 </div>
 
-<script type="text/javascript" src="../masonry.min.js"></script>
+<script type="text/javascript" src="../scripts/masonry.min.js"></script>
 
