--- a/portfolio.html
+++ b/portfolio.html
@@ -50,5 +50,8 @@ permalink: /portfolio/
   </div>
 </div>
 
+<script type="text/javascript" src="../scripts/vendor/jquery-1.10.2.min.js"></script>
+
 <script type="text/javascript" src="../scripts/masonry.min.js"></script>
+<script type="text/javascript" src="../scripts/script.js"></script>
 
