update file names, add list-grid mixin

--- a/newsapps.html
+++ b/newsapps.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: Portfolio
-permalink: /portfolio/
+title: News Apps
+permalink: /newsapps/
 ---
 
-<div id="container" class="clearfix fluid">
+<div id="container" class="clearfix newsapps">
 
 </div>
 
