--- a/newsapps.html
+++ b/newsapps.html
@@ -4,7 +4,7 @@ title: News Apps
 permalink: /newsapps/
 ---
 
-<div id="container" class="clearfix newsapps">
+<div id="container" class="newsapps">
 
 </div>
 
