--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 layout: default
 ---
 
+<div class="main-grid">
+  <h3>Under Construction... stay tuned.</h3>
+  <img src="{{ site.baseurl }}/images/cat_snuggles.jpg">
+</div>
 
 
