--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="main-grid">
   <h3>Under Construction... stay tuned.</h3>
-  <img src="{{ site.baseurl }}/images/cat_snuggles.jpg">
+  <img src="{{ site.baseurl }}/images/cat-love.png">
 </div>
 
 
