--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ permalink: /about/
     <div class="prose">
       
       <p>I joined The Texas Tribune in 2010, shortly after earning a bachelor’s degree in cultural theory from Scripps College in Claremont, CA. As a data reporter for the Trib, I learned to develop interactive stories, and wrote about a myriad of political topics, including the economy, health care and the 2011 Texas legislative session. In 2012, I was promoted to cover health care, during which time I was nationally recognized for my coverage of women’s health and abortion politics. As a founding member of the Tribune’s news apps team, I decided to leave the health care beat in 2014 to work on news apps full-time. </p>
-      <p>In my unprofessional life, I'm a super nerdy lady from Austin. I have two cats, Stella and Lola. That's Steeeellllllaaaaaaa, and La-La-La-La-Lola to anyone who likes pop-culture references. They're the stars of my  <a href="http://instagram.com/hello_becca">Instagram</a> account, and my life. On the weekends, you'll find me on my bike exploring all the new places popping up in the city. Unless the Texas heat has become just too darn hot, I'm usually growing delicious vegetables in my garden. When music is playing, my booty takes on a life of its own. And I'm pretty sure I could live on tacos. </p>
+      <p>In my unprofessional life, I'm a super nerdy lady from Austin. I have two cats, Stella and Lola. Yup, Steeeellllllaaaaaaa, and La-La-La-La-Lola. They're the stars of my  <a href="http://instagram.com/hello_becca">Instagram</a> account, and my life. On the weekends, you'll find me on my bike exploring. I like growing delicious vegetables in my garden. Also, I'm pretty sure I could live on tacos. </p>
     </div>
   </div>
 </div>
