add breakpoints to fix header, news apps

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <div class="main-grid">
-  <img src="{{ site.baseurl }}/images/cat-love.png">
+  <div class="landing">
+    <img src="{{ site.baseurl }}/images/cat-love.png">
+  </div>
 </div>
 
 
