--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@ permalink: /about/
     <div class="intro-image">
       <img src="{{ site.baseurl }}/images/me.jpg">
     </div>
-    <header class="intro">
+    <section class="intro">
       <h2>Becca Aaronson</h2>
       <p>News apps producer and co-leader of The Texas Tribune's news apps team.</p>
-    </header>
+    </section>
     <div class="prose">
       <p>As a founding member of the The Texas Tribune’s news apps team, I've helped progress the Tribune's <a href="http://www.texastribune.org/about/">mission</a> to inform and engage Texas about public policy, politics, government and statewide issues. We develop news applications &mdash; visual features and data-driven editorial content for special investigative projects.</p>
       <p>I joined the Tribune in 2010, shortly after earning a bachelor’s degree in cultural theory from Scripps College in Claremont, CA. As a data reporter, I learned to develop interactive stories, and wrote about a myriad of political topics, including the economy, health care and the 2011 Texas legislative session. From 2012 to early 2014, my beat was health care, and during that time I was nationally recognized for my coverage of women’s health and abortion politics.</p>
