--- a/newsapps.html
+++ b/newsapps.html
@@ -5,12 +5,12 @@ permalink: /newsapps/
 ---
 
 <div id="container" class="main-grid">
-  <ul class="list-grid"></ul>
+  <section class="newsapps">
+    <ul class="list-grid"></ul>
+  </section>
 </div>
 
 <script type="text/javascript" src="../scripts/vendor/jquery-1.10.2.min.js"></script>
-
 <script type="text/javascript" src="../scripts/masonry.min.js"></script>
-
 <script type="text/javascript" src="../scripts/script.js"></script>
 
