--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ layout: default
 
 <div class="main-grid">
   <div class="landing">
-    <img src="{{ site.baseurl }}/images/cat-love.png">
+    <img class="cat-love" src="{{ site.baseurl }}/images/cat-love.png">
   </div>
 </div>
 
-
+<script type="text/javascript" src="../scripts/vendor/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="../scripts/landing.js"></script>
